# Bl4818-servo

./: .gitignore  CLAUDE.md  GEMINI.md  LICENSE  Makefile  Makefile.bench  README.md  capture_dump.csv  capture_oscillation.csv  flash.py  ms51_flash_config.py  protocol.md  ring_tool.py
.claude/: settings.local.json
bench/: bench_main.c
docs/: audit-2026-03-26.md  pinout.md
docs/EC_N76E003_Close_Loop_BLDC_Motor_V1.00/Common/: Common.c
docs/EC_N76E003_Close_Loop_BLDC_Motor_V1.00/Sample_Code/ExampleCode/Close_Loop_BLDC_Motor_V1.00/: CloseLoopBLDCMotor.uvopt  CloseLoopBLDCMotor.uvproj  Nu_Link_8051_Driver.ini
docs/EC_N76E003_Close_Loop_BLDC_Motor_V1.00/Sample_Code/ExampleCode/Close_Loop_BLDC_Motor_V1.00/Code/: N76E003_BLDCMotorControl.c
host/arduino-pico/BL4818RingMaster/: README.md  library.json
host/arduino-pico/BL4818RingMaster/examples/RingRoundRobin/: RingRoundRobin.ino
host/arduino-pico/BL4818RingMaster/src/: BL4818RingMaster.cpp  BL4818RingMaster.h
host/arduino-pico/rpipico2w-master-example/: platformio.ini
host/arduino-pico/rpipico2w-master-example/src/: main.cpp
host/arduino-pico/rpipico2w-single-actuator-testbench/: README.md  platformio.ini
host/arduino-pico/rpipico2w-single-actuator-testbench/src/: AppConfig.h  As5047Chain.cpp  As5047Chain.h  SingleActuatorController.cpp  SingleActuatorController.h  main.cpp
include/: adc.h  commutation.h  encoder.h  flash.h  hall.h  motor.h  ms51_config.h  ms51_reg.h  pid.h  protocol.h  pwm.h  uart.h
nu-link/: platformio.ini
nu-link/src/: arduino.cpp  isp_common.h  main.cpp  n51_icp.c  n51_icp.h  n51_pgm.h
scripts/: ihx-to-bin.ps1
solution/: m2003.cbuild-idx.yml  m2003.cbuild-pack.yml  m2003.cbuild-set.yml  m2003.csolution.yml  vcpkg-configuration.json
solution/m2003-motor/: .clangd  m2003-motor.cproject.yml
solution/m2003-motor/RTE/Device/M2003FC1AE/: regions_M2003FC1AE.h
solution/m2003-motor/RTE/_Debug_M2003FC1AE/: RTE_Components.h
solution/m2003-motor/src/: motor.c
solution/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
solution/tmp/1/: CMakeCache.txt
solution/tmp/m2003-motor.Debug+M2003FC1AE/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
solution/tmp/m2003-motor.Debug+M2003FC1AE/src/m2003-motor.Debug+M2003FC1AE-stamp/: m2003-motor.Debug+M2003FC1AE-configure-.cmake  m2003-motor.Debug+M2003FC1AE-source_dirinfo.txt
solution/tmp/m2003-motor.Debug+M2003FC1AE/tmp/: m2003-motor.Debug+M2003FC1AE-cfgcmd.txt  m2003-motor.Debug+M2003FC1AE-mkdirs.cmake
src/: adc.c  commutation.c  encoder.c  flash.c  hall.c  main.c  motor.c  pid.c  protocol.c  pwm.c  uart.c  vectors.asm
